--- a/.github/workflows/rax3000m-builder.yml
+++ b/.github/workflows/rax3000m-builder.yml
@@ -41,8 +41,8 @@ jobs:
         
     - name: Clone source code
       env: 
-        REPO_URL: https://github.com/hanwckf/immortalwrt-mt798x
-        REPO_BRANCH: openwrt-21.02
+        REPO_URL: https://github.com/padavanonly/immortalwrt-mt798x-24.10
+        REPO_BRANCH: openwrt-24.10-6.6
       run: |
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
         cd openwrt
