--- a/.github/workflows/rax3000m-builder.yml
+++ b/.github/workflows/rax3000m-builder.yml
@@ -26,10 +26,8 @@ jobs:
         sudo timedatectl set-timezone "Asia/Shanghai" 
         sudo -E swapoff -a
         sudo -E rm -f /swapfile
-        sudo -E docker image prune -a -f
+        sudo docker image prune --all --force
         sudo -E snap set system refresh.retain=2
-        sudo -E apt-get -y purge dotnet* firefox ghc* google* hhvm llvm* mono* mysql* openjdk* php* zulu*
-        sudo -E apt-get -y autoremove --purge
         sudo -E rm -rf /usr/share/dotnet /usr/local/lib/android/sdk /etc/mysql /etc/php /usr/local/share/boost
         [ -n "$AGENT_TOOLSDIRECTORY" ] && sudo rm -rf "$AGENT_TOOLSDIRECTORY"
         sudo -E apt-get update -y
